chore: custom css 외부 파일로 분리 적용

--- a/src/main/resources/templates/dashboard/index.html
+++ b/src/main/resources/templates/dashboard/index.html
@@ -38,31 +38,8 @@
     <script th:src="@{/dist/assets/plugins/custom/datatables/datatables.bundle.js}"
             src="dist/assets/plugins/custom/datatables/datatables.bundle.js"></script>
     <!--End::DataTables-->
-
-    <style>
-
-        body {
-            font-family: "Poppins", "Noto Sans KR", sans-serif
-        }
-
-        .noto-sans-kr {
-            font-family: 'Noto Sans KR', sans-serif;
-        }
-
-        .modal-title {
-            font-size: 16px;
-        }
-
-        #jstree {
-            font-size: 15px;
-        }
-
-        [contenteditable] {
-            outline: 1px solid transparent;
-        }
-
-
-    </style>
+    <link th:href="@{/dist/custom/css/custom_index.css}"
+          href="dist/custom/css/custom_index.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
 
