feat: Column 명 설정 [ALL, 단어, 뜻, 맞은 횟수, 틀린 횟수] (#6)

--- a/src/main/resources/templates/dashboard/index.html
+++ b/src/main/resources/templates/dashboard/index.html
@@ -173,11 +173,10 @@
                                     </label>
                                 </div>
                             </th>
-                            <th class="min-w-200px">WORD</th>
-                            <th class="min-w-200px">MEANING</th>
-                            <th>DESCRIPTION</th>
-                            <th>RESENT LEARN</th>
-                            <th>STATE</th>
+                            <th class="min-w-200px noto-sans-kr fw-boldest">단어</th>
+                            <th class="min-w-200px noto-sans-kr fw-boldest">뜻</th>
+                            <th class="noto-sans-kr fw-boldest">맞은 횟수</th>
+                            <th class="noto-sans-kr fw-boldest">틀린 횟수</th>
                         </tr>
                         </thead>
                         <tbody>
@@ -191,12 +190,8 @@
                             </td>
                             <td contenteditable="true">Culture</td>
                             <td contenteditable="true">문화, 교양</td>
-                            <td contenteditable="true"></td>
-                            <td class="ps-7">2021-11-07</td>
-                            <td>
-                                <i class="fas fa-pen" data-bs-toggle="tooltip" data-bs-placement="left"
-                                   title="수정할 단어"></i>
-                            </td>
+                            <td>0</td>
+                            <td>0</td>
                         </tr>
                         <tr>
                             <td>
@@ -208,13 +203,8 @@
                             </td>
                             <td contenteditable="true">Experience</td>
                             <td contenteditable="true">경험</td>
-                            <td contenteditable="true"></td>
-                            <td class="ps-7">2021-11-07</td>
-                            <td>
-                                <i class="fas fa-plus" data-bs-toggle="tooltip" data-bs-placement="left"
-                                   title="추가할 단어"></i>
-                            </td>
-
+                            <td>0</td>
+                            <td>0</td>
                         </tr>
                         <tr>
                             <td>
@@ -226,12 +216,8 @@
                             </td>
                             <td contenteditable="true">Education</td>
                             <td contenteditable="true">교육</td>
-                            <td contenteditable="true"></td>
-                            <td class="ps-7">2021-11-07</td>
-                            <td>
-                                <i class="fas fa-pen" data-bs-toggle="tooltip" data-bs-placement="left"
-                                   title="수정할 단어"> </i>
-                            </td>
+                            <td>0</td>
+                            <td>0</td>
                         </tr>
                         <tr>
                             <td>
@@ -243,9 +229,8 @@
                             </td>
                             <td contenteditable="true">Symbol</td>
                             <td contenteditable="true">상징</td>
-                            <td contenteditable="true"></td>
-                            <td class="ps-7">2021-11-07</td>
-                            <td></td>
+                            <td>0</td>
+                            <td>0</td>
                         </tr>
                         <tr>
                             <td>
@@ -257,12 +242,8 @@
                             </td>
                             <td contenteditable="true">Effect</td>
                             <td contenteditable="true">결과, 영향, 효과</td>
-                            <td contenteditable="true"></td>
-                            <td class="ps-7">2021-11-07</td>
-                            <td>
-                                <i class="fas fa-trash-alt" data-bs-toggle="tooltip" data-bs-placement="left"
-                                   title="삭제할 단어"></i>
-                            </td>
+                            <td>0</td>
+                            <td>0</td>
                         </tr>
                         <tr>
                             <td>
@@ -274,12 +255,8 @@
                             </td>
                             <td contenteditable="true">Liberty</td>
                             <td contenteditable="true">자유</td>
-                            <td contenteditable="true"></td>
-                            <td class="ps-7">2021-11-07</td>
-                            <td>
-                                <i class="fas fa-pen" data-bs-toggle="tooltip" data-bs-placement="left"
-                                   title="수정할 단어"></i>
-                            </td>
+                            <td>0</td>
+                            <td>0</td>
                         </tr>
                         <tr>
                             <td>
@@ -291,12 +268,8 @@
                             </td>
                             <td contenteditable="true">Affair</td>
                             <td contenteditable="true">사건, 일</td>
-                            <td contenteditable="true"></td>
-                            <td class="ps-7">2021-11-07</td>
-                            <td>
-                                <i class="fas fa-pen" data-bs-toggle="tooltip" data-bs-placement="left"
-                                   title="수정할 단어"></i>
-                            </td>
+                            <td>0</td>
+                            <td>0</td>
                         </tr>
                         <tr>
                             <td>
@@ -308,12 +281,8 @@
                             </td>
                             <td contenteditable="true">Comfort</td>
                             <td contenteditable="true">안락, 위안</td>
-                            <td contenteditable="true"></td>
-                            <td class="ps-7">2021-11-07</td>
-                            <td>
-                                <i class="fas fa-pen" data-bs-toggle="tooltip" data-bs-placement="left"
-                                   title="수정할 단어"></i>
-                            </td>
+                            <td>0</td>
+                            <td>0</td>
                         </tr>
                         <tr>
                             <td>
@@ -325,9 +294,8 @@
                             </td>
                             <td contenteditable="true">Tradition</td>
                             <td contenteditable="true">전통, 전설</td>
-                            <td contenteditable="true"></td>
-                            <td class="ps-7">2021-11-07</td>
-                            <td></td>
+                            <td>0</td>
+                            <td>0</td>
                         </tr>
                         <tr>
                             <td>
@@ -339,12 +307,8 @@
                             </td>
                             <td contenteditable="true">Subject</td>
                             <td contenteditable="true">학과, 주제, 주어</td>
-                            <td contenteditable="true"></td>
-                            <td class="ps-7">2021-11-07</td>
-                            <td>
-                                <i class="fas fa-trash-alt" data-bs-toggle="tooltip" data-bs-placement="left"
-                                   title="삭제할 단어"></i>
-                            </td>
+                            <td>0</td>
+                            <td>0</td>
                         </tr>
                         </tbody>
                     </table>
