feat: DataTables show 기능 제거 (#6)

--- a/src/main/resources/templates/dashboard/index.html
+++ b/src/main/resources/templates/dashboard/index.html
@@ -162,7 +162,7 @@
                 <div class="card-body">
 
                     <!-- table -->
-                    <table id="datatables" class="table table-striped border table-row-bordered gy-5 gs-7 w-100">
+                    <table id="datatables" class="table border table-striped table-row-bordered gy-5 gs-7 w-100">
                         <thead>
                         <tr class="fw-bold fs-6 text-gray-800 border-bottom-2 border-gray-200">
                             <th style="width: 100px">
@@ -323,8 +323,8 @@
                         <button type="button" class="btn btn-danger me-auto noto-sans-kr" data-bs-toggle="modal"
                                 data-bs-target="#kt_modal_1">학습 시작
                         </button>
-                        <button id="btn-add" class="btn btn-primary noto-sans-kr me-2 d-none">추가</button>
-                        <button id="btn-remove" class="btn btn-primary noto-sans-kr me-2 d-none">삭제</button>
+                        <button id="btn-add" class="btn btn-primary noto-sans-kr me-2">추가</button>
+                        <button id="btn-remove" class="btn btn-primary noto-sans-kr me-2">삭제</button>
                         <button id="btn-edit" class="btn btn-primary noto-sans-kr me-2">편집</button>
                         <button id="btn-save" class="btn btn-primary noto-sans-kr d-none">저장</button>
                     </div>
